err/ctec-thrift-client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ctec_thrift_client'...
Compiling './lib/python3.5/site-packages/ctec_thrift_client/client_pool.py'...
***   File "./lib/python3.5/site-packages/ctec_thrift_client/client_pool.py", line 171
    except TTransportException, e:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ctec_thrift_client-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/kazoo'...
Listing './lib/python3.5/site-packages/kazoo/handlers'...
Listing './lib/python3.5/site-packages/kazoo/protocol'...
Listing './lib/python3.5/site-packages/kazoo/recipe'...
Listing './lib/python3.5/site-packages/kazoo/testing'...
Listing './lib/python3.5/site-packages/kazoo/tests'...
Listing './lib/python3.5/site-packages/kazoo-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/thriftpy'...
Listing './lib/python3.5/site-packages/thriftpy/contrib'...
Listing './lib/python3.5/site-packages/thriftpy/contrib/tracking'...
Listing './lib/python3.5/site-packages/thriftpy/parser'...
Listing './lib/python3.5/site-packages/thriftpy/protocol'...
Listing './lib/python3.5/site-packages/thriftpy/transport'...
Listing './lib/python3.5/site-packages/thriftpy/transport/buffered'...
Listing './lib/python3.5/site-packages/thriftpy/transport/framed'...
Listing './lib/python3.5/site-packages/thriftpy/transport/memory'...
Listing './lib/python3.5/site-packages/thriftpy-0.3.9.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
